
[package]
name = "safe_send_fil"
version = "0.1.0"
edition = "2021"

[dependencies]
fvm_sdk = "2.0.0"
fvm_shared = "2.0.0"

anyhow = "1.0"
cid = { version = "0.8.4", default-features = false }
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.2.1"
multihash = { version = "0.16.2", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1"
serde_tuple = "0.5"

[dev-dependencies]
fvm = "2.0.0"

libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"